# Dirstat

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
src/: dirstat.cpp  dirstat.hpp  main.cpp
test/: test_list.cpp
